Fixed a layout bug

--- a/sites/all/themes/dev/warmshowers_zen/css/fresh.css
+++ b/sites/all/themes/dev/warmshowers_zen/css/fresh.css
@@ -98,3 +98,6 @@ div#site-name strong { /* Remove Bold, the strong is to help Google know that it
   left: -4px;
   z-index: 999;
 }
+#header .block { /* cool layout bug */
+  margin: 0;
+}
